add 酷狗音乐, 酷我音乐, 网易云音乐, QQ音乐