@@ -1,25 +1,32 @@
 package cn.qaiu.util;
 
+import org.apache.commons.lang3.StringUtils;
+
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
 public class URLUtil {
 
-    private Map<String, String> queryParams = new HashMap<>();
+    private final Map<String, String> queryParams = new HashMap<>();
 
     // 构造函数，传入URL并解析参数
     private URLUtil(String url) {
         try {
             URL parsedUrl = new URL(url);
+            String ref = parsedUrl.getRef();
+            if (StringUtils.isNotEmpty(ref)) {
+                parsedUrl = new URL(parsedUrl.getProtocol() + "://" + parsedUrl.getHost() + ref);
+            }
             String query = parsedUrl.getQuery();
             if (query != null) {
                 String[] pairs = query.split("&");
                 for (String pair : pairs) {
                     String[] keyValue = pair.split("=");
-                    String key = URLDecoder.decode(keyValue[0], "UTF-8");
-                    String value = keyValue.length > 1 ? URLDecoder.decode(keyValue[1], "UTF-8") : "";
+                    String key = URLDecoder.decode(keyValue[0], StandardCharsets.UTF_8);
+                    String value = keyValue.length > 1 ? URLDecoder.decode(keyValue[1], StandardCharsets.UTF_8) : "";
                     queryParams.put(key, value);
                 }
             }
